test/data/valid/name_tuple.py
__version__ = (__version__, a) = ("1.2.3", 23)
__custom__ = (__custom__, b) = (42, "3.4.5")
