test/data/invalid/expression.py
__version__ = ".".join(map(str, range(3)))
